# pdf2md

./: .dockerignore  .gitignore  Dockerfile  LICENSE  OPTIMIZATION_REPORT.md  OPTIMIZATION_V2.md  README.md  docker-compose.yml  pyproject.toml  test_api.html
app/: __init__.py  converter.py  main.py  postprocess.py
benchmark/: BENCHMARK.md  compare.py  run_all.sh  run_docling.py  run_kreuzberg.py  run_marker.py
scripts/: check_autoprocessor.py  check_cuda.py  test_monitoring.py
test/: run_convert_example.py  run_example.py  run_report_example.py
