[project]
name = "docling-server"
version = "0.1.0"
description = "PDF to Markdown conversion service using Docling with GPU acceleration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "docling>=2.0.0",
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
# PyTorch with CUDA: install with
#   uv sync --extra cuda
cuda = [
    "torch"
]

[tool.uv]
# 固定 Python 版本可在项目根目录执行: uv python pin 3.12（会生成 .python-version）
index-url = "https://pypi.org/simple"

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", extra = "cuda" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
